# fastapi_url_shortener

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: hello-actions.yaml  python-checks.yaml
url-shortener/: .coveragerc  app_lifespan.py  main.py  manage.py  stuff.py
url-shortener/api/: __init__.py  main_views.py  redirect_views.py
url-shortener/api/api_v1/auth/services/: redis_tokens_helper.py  redis_users_helper.py  tokens_helper.py  users_helper.py
url-shortener/api/api_v1/short_urls/: crud.py  dependencies.py  my_redis.py  views.py
url-shortener/api/api_v1/short_urls/views/: __init__.py  detail_views.py  list_views.py
url-shortener/commands/: cli.py  hello.py  tokens.py
url-shortener/core/: config.py
url-shortener/schemas/: short_url.py
url-shortener/testing/: conftest.py
url-shortener/testing/test_api/: test_views.py
url-shortener/testing/test_api/test_api_v1/test_auth/test_services/: test_redis_tokens_helper.py
url-shortener/testing/test_api/test_api_v1/test_short_urls/: test_crud.py
url-shortener/testing/test_api/test_api_v1/test_short_urls/test_views/test_details_views/: test_delete.py
url-shortener/testing/test_api/test_api_v1/test_short_urls/test_views/test_list_views/: test_create.py
url-shortener/testing/test_schemas/: test_short_url.py
